# Federated-Learning-for-Critical-Electrical-Infrastructure-Maintenance

./: Emergency Station Generator Maintenance Data.xlsx  Federated Learning for Breaker Advanced.ipynb  Large Power Transformer Maintenance Data.xlsx  README.md  README_Formatted.md  __init__.py  client_app.py  pyproject.toml  requirements.txt  server_app.py  simulation_app.py  task.py
Datasets/: HV Circuit Breaker Maintenance Data.xlsx
Functions/: breaker_functions.py  common_functions.py
Notebooks/: Federated Learning for Breaker Advanced.ipynb  Federated Learning for Breaker Main.ipynb  Federated_Learning_for_Breaker_Advanced.ipynb  Federated_Learning_for_Breaker_Main.ipynb  Federated_Learning_for_Generator.ipynb  Federated_Learning_for_Generator_Refactored.ipynb  Federated_Learning_for_Transformers.ipynb  Federated_Learning_for_Transformers_Refactored.ipynb  breaker_advanced_functions.py  breaker_functions.py  requirements.txt
TensorFlow Implementation/: Working_WIP.ipynb
