[project]
name = "federated_cb_maintenance"
version = "0.1.0"
description = "Federated Learning for Circuit Breaker Maintenance using Flower"
authors = [{ name = "Your Name" }]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
flwr = "^1.6.0"
scikit-learn = "^1.2.0"
pandas = "^2.0.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
